bynkc/tests/fixtures/negative/75_call_not_consumed/src/commerce/payment.karn
context commerce.payment

exports opaque { AuthId }

type AuthId = String where Matches("AUTH-[0-9]{8}")

service authorise {
  on call(amount: Int) -> Effect[Result[AuthId, Int]] {
    Effect.pure(Err(0))
  }
}
